--- a/ListOfDeal/ListOfDeal.csproj
+++ b/ListOfDeal/ListOfDeal.csproj
@@ -120,6 +120,7 @@
     <Compile Include="Classes\WList\WLConnector.cs" />
     <Compile Include="Classes\WList\WLLogger.cs" />
     <Compile Include="Classes\WList\WLProcessor.cs" />
+    <Compile Include="Classes\WList\WLProcessorTests.cs" />
     <Compile Include="Classes\WList\WunderListViewModel.cs" />
     <Compile Include="IListOfDealBaseEntities.cs" />
     <Compile Include="Views\ChartView.xaml.cs">
