--- a/ListOfDeal/ListOfDeal.csproj
+++ b/ListOfDeal/ListOfDeal.csproj
@@ -132,7 +132,9 @@
     </ApplicationDefinition>
     <Compile Include="Classes\DayData.cs" />
     <Compile Include="Classes\HistoryActionItem.cs" />
+    <Compile Include="Classes\MyWeekRecord.cs" />
     <Compile Include="Classes\Services.cs" />
+    <Compile Include="Classes\WeekStatisticViewModel.cs" />
     <Compile Include="Classes\WList\WLConnector.cs" />
     <Compile Include="Classes\WList\WLLogger.cs" />
     <Compile Include="Classes\WList\WLProcessor.cs" />
@@ -156,6 +158,9 @@
     </Compile>
     <Compile Include="Views\Actions\WaitedActionsView.xaml.cs">
       <DependentUpon>WaitedActionsView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\WeeksStatistic.xaml.cs">
+      <DependentUpon>WeeksStatistic.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\WunderListView.xaml.cs">
       <DependentUpon>WunderListView.xaml</DependentUpon>
@@ -226,6 +231,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\Actions\WaitedActionsView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\WeeksStatistic.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
