--- a/ListOfDeal/App.config
+++ b/ListOfDeal/App.config
@@ -17,6 +17,7 @@
      <add name="ListOfDealBaseEntities3" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ANDREYHP;initial catalog=ListOfDealBaseTest;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
   <add name="ListOfDealBaseEntities2" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ANDREYHP;initial catalog=ListOfDealBase;persist security info=True;user id=sa;password=dx;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
     <add name="ListOfDealBaseEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=kozhevnikov-w10;initial catalog=ListOfDealBase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
+	  <add name="KOZHEVNIKOV-NBXListOfDealBase" connectionString="XpoProvider=MSSqlServer;data source=KOZHEVNIKOV-NBX;integrated security=SSPI;initial catalog=ListOfDealBaseTest" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
